# Zenith

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  sonar-project.properties
Editor/: CMakeLists.txt
Editor/ProjectApex/: Apex.zproj
Editor/ProjectApex/Assets/Meshes/Fbx/: spider.fbx
Editor/ProjectApex/Assets/Meshes/Gltf/Cube/: Cube.glb
Editor/Resources/Meshes/Default/: Capsule.glb  Cone.glb  Cube.glb  Cylinder.glb  Octahedron.glb  Plane.glb  Sphere.glb  Torus.glb
Editor/Resources/NewProjectTemplate/: Project.zproj
Editor/Resources/Shaders/: BasicMesh.glsl  BasicMesh.hlsl  Color.glsl  PBR_StaticMesh.hlsl  PBR_TransparentMesh.hlsl  SimpleQuad.hlsl  Triangle.hlsl  basic.hlsl  triangle.frag  triangle.vert  triangle.vert.spv
Editor/Resources/Shaders/Include/HLSL/: PBR_Common.hlsl
Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  Zenith-Editor.cpp
Engine/: CMakeLists.txt
Engine/Source/: Zenith.hpp  znpch.hpp
Engine/Source/Zenith/: EntryPoint.hpp
Engine/Source/Zenith/Asset/: Asset.hpp  AssetExtensions.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetSerializer.cpp  AssetSerializer.hpp  AssetTypes.hpp  CMakeLists.txt  MeshImporter.cpp  MeshImporter.hpp  MeshSerializer.cpp  MeshSerializer.hpp  MeshSourceFile.hpp  TextureImporter.cpp  TextureImporter.hpp
Engine/Source/Zenith/Asset/AssetManager/: AssetManagerBase.hpp  EditorAssetManager.cpp  EditorAssetManager.hpp
Engine/Source/Zenith/Asset/AssetSystem/: EditorAssetSystem.cpp  EditorAssetSystem.hpp
Engine/Source/Zenith/Core/: Application.cpp  Application.hpp  ApplicationContext.cpp  ApplicationContext.hpp  Assert.hpp  Base.cpp  Base.hpp  Buffer.hpp  CMakeLists.txt  FastRandom.hpp  FatalSignal.cpp  FatalSignal.hpp  Hash.cpp  Hash.hpp  HashCRC32.cpp  Identifier.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  LogCustomFormatters.hpp  Memory.cpp  Platform.cpp  Ref.cpp  Ref.hpp  SplashScreen.cpp  SplashScreen.hpp  Thread.hpp  TimeStep.hpp  Timer.hpp  UUID.cpp  UUID.hpp  Version.hpp  Window.cpp  Window.hpp
Engine/Source/Zenith/Debug/: CMakeLists.txt  Profiler.hpp
Engine/Source/Zenith/Editor/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.hpp
Engine/Source/Zenith/Editor/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Engine/Source/Zenith/Embed/: ZenithIcon.embed
Engine/Source/Zenith/Events/: ApplicationEvent.hpp  CMakeLists.txt  EditorEvent.hpp  Event.hpp  MouseEvent.hpp
Engine/Source/Zenith/ImGui/: CMakeLists.txt  Colors.hpp  ImGuiBuild.cpp  ImGuiCore.cpp  ImGuiCore.hpp  ImGuiFonts.cpp  ImGuiFonts.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/Source/Zenith/Math/: AABB.hpp  CMakeLists.txt  Math.cpp  Math.hpp  Ray.hpp
Engine/Source/Zenith/Platform/: CMakeLists.txt
Engine/Source/Zenith/Platform/Linux/: LinuxFileSystem.cpp
Engine/Source/Zenith/Platform/Unix/: UnixFileSystem.cpp  UnixProcessHelper.cpp  UnixRenderThread.cpp  UnixThread.cpp
Engine/Source/Zenith/Platform/Windows/: WindowsFileSystem.cpp  WindowsProcessHelper.cpp  WindowsRenderThread.cpp  WindowsThread.cpp
Engine/Source/Zenith/Project/: CMakeLists.txt  Project.cpp  Project.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp  UserPreferences.cpp  UserPreferences.hpp
Engine/Source/Zenith/Reflection/: CMakeLists.txt  MetaHelpers.hpp  TypeDescriptor.hpp  TypeName.hpp  TypeStructures.hpp  TypeUtils.hpp
Engine/Source/Zenith/Renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  GPUStats.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  MaterialAsset.cpp  MaterialAsset.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Pipeline.cpp  Pipeline.hpp  RenderCommandBuffer.cpp  RenderCommandBuffer.hpp  RenderPass.cpp  RenderPass.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderThread.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.hpp  RendererConfig.hpp  RendererContext.cpp  RendererContext.hpp  RendererResource.hpp  RendererStats.cpp  RendererStats.hpp  (+18 more)
Engine/Source/Zenith/Renderer/API/: RenderCommandQueue.cpp  Renderer.cpp  Renderer.hpp  RendererAPI.hpp  RendererContext.cpp
Engine/Source/Zenith/Renderer/API/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLRenderer.cpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Engine/Source/Zenith/Renderer/API/Vulkan/: CMakeLists.txt  DXCCompiler.cpp  DXCCompiler.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  TriangleRenderer.cpp  TriangleRenderer.hpp  Vulkan.cpp  Vulkan.hpp  VulkanAPI.cpp  VulkanAPI.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  (+34 more)
Engine/Source/Zenith/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
Engine/Source/Zenith/Renderer/Vulkan/: Vulkan.cpp  VulkanAllocator.cpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanImGuiLayer.cpp  VulkanImGuiLayer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapChain.hpp
Engine/Source/Zenith/Serialization/: CMakeLists.txt  FileStream.cpp  FileStream.hpp  MemoryStream.cpp  MemoryStream.hpp  Serialization.hpp  SerializationImpl.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
Engine/Source/Zenith/UI/: CMakeLists.txt  UILayer.cpp  UILayer.hpp
Engine/Source/Zenith/Utilities/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  ContainerUtils.hpp  DurationUtils.hpp  FileSystem.cpp  JSONSerializationHelpers.hpp  ProcessHelper.hpp  SerializationMacros.hpp  StringUtils.cpp  StringUtils.hpp  TypeInfo.hpp
Tests/: CMakeLists.txt
Tests/Core/: test_FastRandom.cpp  test_UUID.cpp
(+15 files in other folders)
